# DISCM_SIM

./: CMakeLists.txt  Main.cpp  Point.cpp  Point.h  Program.cpp  Program.h  ShaderClass.cpp  ShaderClass.h  Sim.sln  Sim.vcxproj  Sim.vcxproj.filters  TextRender.cpp  TextRender.h  TextRenderer.cpp  frag.glsl  vert.glsl
include/glad/: glad.c  glad.h
include/glm/: CMakeLists.txt
src/: CppProperties.json  Main.cpp  Point.cpp  Point.h  Program.cpp  Program.h  ShaderClass.h  Sim.vcxproj  TextRenderer.cpp  TextRenderer.h
